# notification-daemon

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: notification.proto
src/: error.rs  lib.rs  main.rs
src/config/: mod.rs  types.rs  watcher.rs
src/dbus/: icon_hints.rs  mod.rs  server.rs
src/dnd/: focus.rs  mod.rs  state.rs
src/events/: consumer.rs  mod.rs
src/manager/: grouping.rs  mod.rs  notification.rs  rate_limiter.rs  validation.rs
src/socket/: mod.rs  protocol.rs  server.rs
src/storage/: mod.rs  models.rs  sqlite.rs
